--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
         "axios": "^0.18.1",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.5.1",
         "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
+        "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
+        "vue-plugin-load-script": "^1.2.0",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "admin-lte": "^3.0.0-alpha.2",
+        "babel-helper-vue-jsx-merge-props": "^2.0.3",
         "font-awesome": "^4.7.0",
         "laravel-echo": "^1.5.4",
         "laravel-vue-pagination": "^2.3.0",
@@ -37,9 +39,14 @@
         "vue-datetime": "^1.0.0-beta.10",
         "vue-numeric-input": "^1.0.5",
         "vue-progressbar": "^0.7.5",
+        "vue-nav-tabs": "^0.5.7",
         "vue-read-more": "^1.1.1",
+        "vue2-editor": "^2.10.2",
+        "vue-popperjs": "^2.3.0",
+        "vue-good-table": "^2.19.3",
         "vue-router": "^3.1.1",
         "vue2-timepicker": "^0.2.2-rc.0",
+        "vuex": "^3.4.0",
         "weekstart": "^1.0.0"
     }
 }
